API to force download of all RemoteLayer's of a timeline
